--- a/style.css
+++ b/style.css
@@ -81,3 +81,18 @@ label{
     margin-top: 1em;
     margin-bottom: 0.5em;
 }
+
+@media (max-width: 600px){
+    form{
+        width: 80%;
+    }
+
+    main img{
+        width:60%;
+    }
+
+    header img{
+    
+        width: 30%;
+    }
+}
